--- a/normal-distribution.ipynb
+++ b/normal-distribution.ipynb
@@ -11,17 +11,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ee299a33",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define and explain main concepts\n",
-    "# visual plots to explain concepts"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "2fbd4ac7",
    "metadata": {},
@@ -117,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "2f4b5078",
    "metadata": {},
    "outputs": [
@@ -158,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "fa9cf7c0",
    "metadata": {},
    "outputs": [
@@ -188,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "3c5a5cf1",
    "metadata": {},
    "outputs": [
@@ -385,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "id": "35e99416",
    "metadata": {},
    "outputs": [
@@ -554,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "6d42cf83",
    "metadata": {},
    "outputs": [
@@ -564,7 +553,7 @@
        "3.75"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "3a120401",
    "metadata": {},
    "outputs": [
@@ -588,7 +577,7 @@
        "4"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "e6dccadb",
    "metadata": {},
    "outputs": [
@@ -610,7 +599,7 @@
        "4.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "cf4a2cbf",
    "metadata": {},
    "outputs": [
@@ -633,7 +622,7 @@
        "        98.35396535, 164.9055716 ])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "0481c3e3",
    "metadata": {},
    "outputs": [
@@ -657,7 +646,7 @@
        "98.64637005309663"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "fce9a46e",
    "metadata": {},
    "outputs": [
@@ -678,7 +667,7 @@
        "99.0783139920867"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "d707d204",
    "metadata": {},
    "outputs": [],
@@ -700,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "cc5c4f1c",
    "metadata": {},
    "outputs": [
@@ -710,7 +699,7 @@
        "98.64998663951698"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "ed775eba",
    "metadata": {},
    "outputs": [
@@ -732,7 +721,7 @@
        "119.06640735135157"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "b2e5a3a6",
    "metadata": {},
    "outputs": [
@@ -799,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "4b9d0cdd",
    "metadata": {},
    "outputs": [
@@ -825,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "b96e6b1a",
    "metadata": {},
    "outputs": [
@@ -835,7 +824,7 @@
        "3.5"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "04e9a76f",
    "metadata": {},
    "outputs": [
@@ -857,7 +846,7 @@
        "3.4"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "3a3d2923",
    "metadata": {},
    "outputs": [
@@ -884,7 +873,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "51487528",
    "metadata": {},
    "outputs": [
@@ -908,7 +897,7 @@
        "3.6"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "fc67a8c6",
    "metadata": {},
    "outputs": [
@@ -929,7 +918,7 @@
        "[4.4, 3.0, 2.6, 5.0, 1.6, 3.8, 3.2, 2.6, 6.0, 2.8]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "fb077aaa",
    "metadata": {},
    "outputs": [
@@ -970,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "846968fe",
    "metadata": {},
    "outputs": [
@@ -997,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "eff33758",
    "metadata": {},
    "outputs": [
@@ -1023,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "50ea9e70",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "ff1ea130",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1056,7 @@
        "3.5138199999999995"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 28,
    "id": "8ad87d24",
    "metadata": {},
    "outputs": [
@@ -1176,9 +1165,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7a850422",
+   "metadata": {},
+   "source": [
+    "**Kurtosis**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff07d674",
+   "metadata": {},
+   "source": [
+    "Kurtosis is the ‘tailedness’ of the distribution and it refers to its outliers. Three types of kurtosis are: **mesokurtic**, **platykurtic** and **leptokurtic** depending on the excess kurtosis. **Excess kurtosis** compares the tails of the distribution to the normal distribution. Since the normal distribution has the kurtosis=3 when we subtract 3 from it, we get zero for the excess kurtosis, this means that the normal distribution is mesokurtic distribution. Leptokurtic distributions have positive excess kurtosis (>0), high value (>3) and heavy tails, while the platykurtic has light tails with negative excess kurtosis (<0) and low kurtosis (<3). [13](https://statisticsbyjim.com/basics/kurtosis/). It should be noted that the excess kurtosis is sometimes labelled just as kurtosis but it is important to make the distinction between the two. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "57087129",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import skew"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3be364a",
+   "id": "a9161ae4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "124b6b38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a303aa5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bab66c82",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aaa22547",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1193,13 +1240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "3b9ce5e3",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#from scipy.stats import skew"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1267,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 31,
    "id": "d4a96c6f",
    "metadata": {},
    "outputs": [],
@@ -1277,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 32,
    "id": "35d665dd",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1332,7 @@
        "71.5"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 33,
    "id": "f5b934dd",
    "metadata": {},
    "outputs": [
@@ -1309,7 +1354,7 @@
        "72.9"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 34,
    "id": "d9501e9a",
    "metadata": {},
    "outputs": [
@@ -1331,7 +1376,7 @@
        "54"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 35,
    "id": "1142b709",
    "metadata": {},
    "outputs": [
@@ -1353,7 +1398,7 @@
        "19.638114867663738"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 36,
    "id": "40fac5c1",
    "metadata": {},
    "outputs": [
@@ -1375,7 +1420,7 @@
        "0.9624141689445397"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1387,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 37,
    "id": "029917ae",
    "metadata": {},
    "outputs": [
@@ -1397,7 +1442,7 @@
        "0.21386981532100963"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 38,
    "id": "6039e6de",
    "metadata": {},
    "outputs": [],
@@ -1444,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "id": "aeb83fcc",
    "metadata": {},
    "outputs": [
@@ -1454,7 +1499,7 @@
        "5.442593835806473"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1465,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "id": "65b8602d",
    "metadata": {},
    "outputs": [
@@ -1475,7 +1520,7 @@
        "8.442593835806473"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1486,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
    "id": "e2388235",
    "metadata": {},
    "outputs": [
@@ -1496,7 +1541,7 @@
        "5.442593835806473"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1522,7 +1567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86131adc",
+   "id": "03ec366d",
    "metadata": {},
    "source": [
     "### References:\n",
@@ -1540,8 +1585,7 @@
     " * https://statistics.laerd.com/statistical-guides/measures-central-tendency-mean-mode-median.php  \n",
     " * https://www.investopedia.com/terms/c/central_limit_theorem.asp  \n",
     " * https://www.statisticshowto.com/probability-and-statistics/statistics-definitions/pearsons-coefficient-of-skewness/\n",
-    "    \n",
-    "\n"
+    " * https://statisticsbyjim.com/basics/kurtosis/  "
    ]
   },
   {
