--- a/practicals/03-bias-exercises.ipynb
+++ b/practicals/03-bias-exercises.ipynb
@@ -715,12 +715,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c06070ca",
+   "id": "2507bcba",
    "metadata": {},
    "source": [
     "#### References:\n",
-    "Mcloughlin, I., (2022). GitHub repository, https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/03-bias.ipynb   \n",
-    "The Decision Lab (2022). Why do we forget information that we just looked up? Retreived December 8, 2022 from https://thedecisionlab.com/biases/google-effect      "
+    " * Mcloughlin, I., (2022). GitHub repository, https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/03-bias.ipynb   \n",
+    " * The Decision Lab (2022). Why do we forget information that we just looked up? Retreived December 8, 2022 from https://thedecisionlab.com/biases/google-effect      "
    ]
   }
  ],
