--- a/practicals/05-cleansing-exercises.ipynb
+++ b/practicals/05-cleansing-exercises.ipynb
@@ -432,12 +432,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25014ce0",
+   "id": "41527842",
    "metadata": {},
    "source": [
     "#### References:\n",
-    "Mcloughlin, I., (2022). GitHub repository, https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/05-cleansing.ipynb  \n",
-    "Python Documentation (2022). re — Regular expression operations. Version 3.11.1, Retrieved December 18, 2022 from https://docs.python.org/3/library/re.html   "
+    " * Mcloughlin, I., (2022). GitHub repository, https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/05-cleansing.ipynb  \n",
+    " * Python Documentation (2022). re — Regular expression operations. Version 3.11.1, Retrieved December 18, 2022 from https://docs.python.org/3/library/re.html   "
    ]
   }
  ],
