--- a/normal-distribution.ipynb
+++ b/normal-distribution.ipynb
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e154711",
+   "id": "7071674b",
    "metadata": {},
    "source": [
     "#### Skewness and Kurtosis"
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a850422",
+   "id": "a5571b3d",
    "metadata": {},
    "source": [
     "**Kurtosis**"
@@ -1276,6 +1276,22 @@
    ],
    "source": [
     "kurtosis(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8abe2785",
+   "metadata": {},
+   "source": [
+    "#### Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65bcac60",
+   "metadata": {},
+   "source": [
+    "Describing the concepts of the normal distribution through practical examples and visual representations was a useful reminder of its importance in statistics and data analysis. "
    ]
   },
   {
