--- a/normal-distribution.ipynb
+++ b/normal-distribution.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "id": "2fbd4ac7",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "2f4b5078",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "id": "7b14e3bc",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "id": "35e99416",
    "metadata": {},
    "outputs": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "6d42cf83",
    "metadata": {},
    "outputs": [
@@ -605,7 +605,7 @@
        "3.75"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "3a120401",
    "metadata": {},
    "outputs": [
@@ -629,7 +629,7 @@
        "4"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e6dccadb",
    "metadata": {},
    "outputs": [
@@ -651,7 +651,7 @@
        "4.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "cf4a2cbf",
    "metadata": {},
    "outputs": [
@@ -674,7 +674,7 @@
        "        98.35396535, 164.9055716 ])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "0481c3e3",
    "metadata": {},
    "outputs": [
@@ -698,7 +698,7 @@
        "98.64637005309663"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "fce9a46e",
    "metadata": {},
    "outputs": [
@@ -719,7 +719,7 @@
        "99.0783139920867"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d707d204",
    "metadata": {},
    "outputs": [],
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "cc5c4f1c",
    "metadata": {},
    "outputs": [
@@ -751,7 +751,7 @@
        "98.64998663951698"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "ed775eba",
    "metadata": {},
    "outputs": [
@@ -773,7 +773,7 @@
        "119.06640735135157"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "id": "b2e5a3a6",
    "metadata": {},
    "outputs": [
@@ -825,24 +825,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e81882b1",
+   "id": "cbae1e9e",
    "metadata": {},
    "source": [
-    "Central limit theorem is a key concept in probability theory and statistics. To understand it, it is necessary to explain _sampling distribution_ that refers to a distribution of the sample means drawn from the population. In simple terms, it states that the means of the samples regardless of the individual distributions of those samples will form the normal distribution if the number of taken samples is large enough to show it. Parametric tests used to estimate the population’s parameters with the premise of a normal distribution are based on this theorem, such as linear regression, t-test and ANOVA. To be able to apply the CLT some of the conditions must be satisfied: samples have to be chosen randomly, they have to be independent from each other and of the same size. The standard for the minimum sample size for CLT to be applied is considered to be 30. [10](https://www.investopedia.com/terms/c/central_limit_theorem.asp)"
+    "Central limit theorem is a key concept in probability theory and statistics. To understand it, it is necessary to explain _sampling distribution_ that refers to a distribution of the sample means drawn from the population. In simple terms, it states that the means of the samples regardless of the individual distributions of those samples will form the normal distribution if the number of taken samples is large enough to show it. Parametric tests used to estimate the population’s parameters with the premise of a normal distribution are based on this theorem, such as linear regression, t-test and ANOVA. To be able to apply the CLT some of the conditions must be satisfied: samples have to be chosen randomly, they have to be independent from each other and of the same size. The standard for the minimum sample size for CLT to be applied is considered to be 30. [9](https://www.investopedia.com/terms/c/central_limit_theorem.asp)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "815282cc",
+   "id": "dad99e37",
    "metadata": {},
    "source": [
-    "To show the Central limit theorem in practice we used an example of dice rolling from DataCamp.[11](https://campus.datacamp.com/courses/introduction-to-statistics-in-python/more-distributions-and-the-central-limit-theorem-3?ex=6)"
+    "To show the Central limit theorem in practice we used an example of dice rolling from DataCamp.[10](https://campus.datacamp.com/courses/introduction-to-statistics-in-python/more-distributions-and-the-central-limit-theorem-3?ex=6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "4b9d0cdd",
+   "execution_count": 17,
+   "id": "a92fc3e2",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "b96e6b1a",
    "metadata": {},
    "outputs": [
@@ -877,7 +877,7 @@
        "3.5"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "04e9a76f",
    "metadata": {},
    "outputs": [
@@ -899,7 +899,7 @@
        "3.4"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "3a3d2923",
    "metadata": {},
    "outputs": [
@@ -926,7 +926,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "51487528",
    "metadata": {},
    "outputs": [
@@ -950,7 +950,7 @@
        "3.6"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "fc67a8c6",
    "metadata": {},
    "outputs": [
@@ -971,7 +971,7 @@
        "[4.4, 3.0, 2.6, 5.0, 1.6, 3.8, 3.2, 2.6, 6.0, 2.8]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "fb077aaa",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "846968fe",
    "metadata": {},
    "outputs": [
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "eff33758",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "50ea9e70",
    "metadata": {},
    "outputs": [
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "ff1ea130",
    "metadata": {},
    "outputs": [
@@ -1109,7 +1109,7 @@
        "3.5138199999999995"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,10 +1129,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9271c8b",
+   "id": "b798cc2e",
    "metadata": {},
    "source": [
-    "**Skewness** measures the asymmetry of the distribution. It can take three forms: positively skewed or the right-skewed with its tail longer on the right side and its peak to the left, where the mean is placed to the right of the median; left-skewed or the negatively skewed with longer tail on the left side where mean is to the left of the median and the zero-skewed that is symmetrical and does not lean to any side. Since the interpretation of the skewness depends on the tail instead of its peak which can be confusing, we should be careful in reading the results. Skewness is useful since it can point to the direction of the outliers. It can be calculated in two ways with Pearson’s first and second coefficients of skewness, depending which measures of central tendency better describe our distribution, for example, if we have two modes it is better to use the second coefficient [12](https://www.statisticshowto.com/probability-and-statistics/statistics-definitions/pearsons-coefficient-of-skewness/) "
+    "**Skewness** measures the asymmetry of the distribution. It can take three forms: positively skewed or the right-skewed with its tail longer on the right side and its peak to the left, where the mean is placed to the right of the median; left-skewed or the negatively skewed with longer tail on the left side where mean is to the left of the median and the zero-skewed that is symmetrical and does not lean to any side. Since the interpretation of the skewness depends on the tail instead of its peak which can be confusing, we should be careful in reading the results. Skewness is useful since it can point to the direction of the outliers. It can be calculated in two ways with Pearson’s first and second coefficients of skewness, depending which measures of central tendency better describe our distribution, for example, if we have two modes it is better to use the second coefficient [11](https://www.statisticshowto.com/probability-and-statistics/statistics-definitions/pearsons-coefficient-of-skewness/) "
    ]
   },
   {
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 28,
    "id": "8ad87d24",
    "metadata": {},
    "outputs": [
@@ -1228,15 +1228,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4938f26",
+   "id": "e199a334",
    "metadata": {},
    "source": [
-    "Kurtosis is the ‘tailedness’ of the distribution and it refers to its outliers. Three types of kurtosis are: **mesokurtic**, **platykurtic** and **leptokurtic** depending on the excess kurtosis. **Excess kurtosis** compares the tails of the distribution to the normal distribution. Since the normal distribution has the kurtosis=3 when we subtract 3 from it, we get zero for the excess kurtosis, this means that the normal distribution is mesokurtic distribution. Leptokurtic distributions have positive excess kurtosis (>0), high value (>3) and heavy tails, for example Laplace distribution, while the platykurtic has light tails with negative excess kurtosis (<0) and low kurtosis (<3) like in example of the uniform distribution. [13](https://statisticsbyjim.com/basics/kurtosis/). It should be noted that the excess kurtosis is sometimes labelled just as kurtosis but it is important to make the distinction between the two. "
+    "Kurtosis is the ‘tailedness’ of the distribution and it refers to its outliers. Three types of kurtosis are: **mesokurtic**, **platykurtic** and **leptokurtic** depending on the excess kurtosis. **Excess kurtosis** compares the tails of the distribution to the normal distribution. Since the normal distribution has the kurtosis=3 when we subtract 3 from it, we get zero for the excess kurtosis, this means that the normal distribution is mesokurtic distribution. Leptokurtic distributions have positive excess kurtosis (>0), high value (>3) and heavy tails, for example Laplace distribution, while the platykurtic has light tails with negative excess kurtosis (<0) and low kurtosis (<3) like in example of the uniform distribution. [12](https://statisticsbyjim.com/basics/kurtosis/). It should be noted that the excess kurtosis is sometimes labelled just as kurtosis but it is important to make the distinction between the two. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "90cafc3a",
    "metadata": {},
    "outputs": [
@@ -1246,7 +1246,7 @@
        "-0.013021559395140448"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "1a1b9767",
    "metadata": {},
    "outputs": [
@@ -1269,7 +1269,7 @@
        "0.02342323456839379"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,25 +1296,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46920f8d",
+   "id": "210f69bc",
    "metadata": {},
    "source": [
     "#### References:\n",
     " * Mcloughlin, I., (2022). GitHub repository, https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/04-outliers.ipynb  \n",
     " * Wikipedia contributors. (2022, December 24). Normal distribution. In Wikipedia, The Free Encyclopedia. Retreived December 26, 2022 from https://en.wikipedia.org/w/index.php?title=Normal_distribution&oldid=1129344614  \n",
     " * Wikipedia contributors. (2022, November 9). Standard deviation. In Wikipedia, The Free Encyclopedia. Retrieved December 27, 2022 from https://en.wikipedia.org/w/index.php?title=Standard_deviation&oldid=1120954441  \n",
-    " * https://numpy.org/doc/stable/reference/random/generated/numpy.random.normal.html  \n",
-    " * https://statisticsbyjim.com/basics/difference-standard-deviation-vs-standard-error/  \n",
+    " * NumPy documentation (2022). numpy.random.nromal, Version 1.24, Retrieved January 5, 2023 from https://numpy.org/doc/stable/reference/random/generated/numpy.random.normal.html    \n",
+    " * Frost, J., (n.d.). Difference Between Standard Deviation and Standard Error, Retrieved January 5, 2023 from https://statisticsbyjim.com/basics/difference-standard-deviation-vs-standard-error/   \n",
     " * Khan, S. (n.d.). Deep definition of the normal distribution. Khan Academy, Retrieved December 30, 2022 from https://www.khanacademy.org/math/statistics-probability/modeling-distributions-of-data/more-on-normal-distributions/v/introduction-to-the-normal-distribution  \n",
     " * Wikipedia contributors. (2022, December 19). Standard score. In Wikipedia, The Free Encyclopedia. Retrieved January 2, 2023 from https://en.wikipedia.org/w/index.php?title=Standard_score&oldid=1128321544  \n",
-    " * https://stackoverflow.com/questions/12608788/changing-the-tick-frequency-on-the-x-or-y-axis  \n",
-    " * https://stackoverflow.com/questions/11244514/modify-tick-label-text   \n",
-    " * https://en.wikipedia.org/wiki/Central_tendency  \n",
-    " * https://www.w3schools.com/python/ref_stat_median.asp \n",
-    " * https://statistics.laerd.com/statistical-guides/measures-central-tendency-mean-mode-median.php  \n",
-    " * https://www.investopedia.com/terms/c/central_limit_theorem.asp  \n",
-    " * https://www.statisticshowto.com/probability-and-statistics/statistics-definitions/pearsons-coefficient-of-skewness/\n",
-    " * https://statisticsbyjim.com/basics/kurtosis/  "
+    " * Unutbu (2012, September 26). Changing the tick frequency on the x or y axis. Answer in Stack Overflow. Retrieved January 5, 2023 from https://stackoverflow.com/questions/12608788/changing-the-tick-frequency-on-the-x-or-y-axis  \n",
+    " * CT Zhu (2013, September, 22). Modify tick label text. Answer in Stack Overflow. Retrieved January 5, 2023 from https://stackoverflow.com/questions/11244514/modify-tick-label-text  \n",
+    " * Wikipedia contributors. (2022, September 14). Central tendency. In Wikipedia, The Free Encyclopedia. Retrieved January 6, 2023, from https://en.wikipedia.org/w/index.php?title=Central_tendency&oldid=1110252458      \n",
+    " * W3Shcools (n.d.). Python statistics.median() Method. Retrieved January 6, 2023 from https://www.w3schools.com/python/ref_stat_median.asp  \n",
+    " * Laerd Statistics (n.d.). Measures of Central Tendency. Retrieved January 6, 2023 from https://statistics.laerd.com/statistical-guides/measures-central-tendency-mean-mode-median.php  \n",
+    " * Ganti, A. (2022, June 28). Central Limit Theorem (CLT): Definition and Key Characteristics. In Investopedia, Retreived January 6, 2023 from https://www.investopedia.com/terms/c/central_limit_theorem.asp\n",
+    " * Glen, S. (n.d.). Pearson’s Coefficient of Skewness. From StatisticsHowTo.com: Elementary Statistics for the rest of us! Retrieved January 6, 2023 from https://www.statisticshowto.com/probability-and-statistics/statistics-definitions/pearsons-coefficient-of-skewness/  \n",
+    " * Frost, J., (n.d.). Kurtosis: Definition, Leptokurtic & Platykurtic. Retrieved January 6, 2023 from https://statisticsbyjim.com/basics/kurtosis/  \n",
+    " * gourishankar (2020, February 28). Mean Median Mode using SQL and DAX. Retrieved January 6, 2023 from https://www.sqlservercentral.com/articles/mean-median-mode-using-sql-and-dax  7\n",
+    " * Matsui, M. (n.d.). The central limit theorem. In DataCamp. Retrieved January 4, 2023 from https://campus.datacamp.com/courses/introduction-to-statistics-in-python/more-distributions-and-the-central-limit-theorem-3?ex=6    "
    ]
   }
  ],
