--- a/practicals/01-information-exercises.ipynb
+++ b/practicals/01-information-exercises.ipynb
@@ -20046,13 +20046,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4947b141",
+   "id": "6966b1e3",
    "metadata": {},
    "source": [
     "#### References:\n",
-    " * GeeksforGeeks, (2022). random.choices() method in Python, https://www.geeksforgeeks.org/random-choices-method-in-python/  \n",
+    " * GeeksforGeeks, (2022). random.choices() method in Python, Retrieved from https://www.geeksforgeeks.org/random-choices-method-in-python/  \n",
     " * Mcloughlin, I., (2022). GitHub repository, https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/01-information.ipynb    \n",
-    " * Socratica, (2017, May 7). List Comprehension. YouTube. https://www.youtube.com/watch?v=AhSvKGTh28Q\n",
+    " * Socratica, (2017, May 7). List Comprehension. [Video file]. YouTube. https://www.youtube.com/watch?v=AhSvKGTh28Q\n",
     " * Fast and Easy Maths! (2018, October 8). Why we cannot find log 0? [Video file]. YouTube. https://www.youtube.com/watch?v=j6scVL0Cp2k"
    ]
   }
