--- a/practicals/04-outliers-exercises.ipynb
+++ b/practicals/04-outliers-exercises.ipynb
@@ -1192,16 +1192,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc078374",
+   "id": "f13bb05e",
    "metadata": {},
    "source": [
     "#### References:\n",
     " * Mcloughlin, I., (2022). GitHub repository, https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/04-outliers.ipynb   \n",
     " * Wikipedia contributors (2022, December 4). Box plot. In Wikipedia, The Free Encyclopedia. Retrieved December 15, 2022 from https://en.wikipedia.org/w/index.php?title=Box_plot&oldid=1125442600  \n",
     " * Arel-Bundock, V., (n.d.). Michelson Speed of Light Data. Retrieved December 15, 2022 from https://vincentarelbundock.github.io/Rdatasets/articles/data.html    \n",
-    " * https://stackoverflow.com/questions/46226032/how-to-change-the-linestyle-of-whiskers-in-pandas-boxplots  \n",
-    " * Matplotlib documentation (2022). matplotlib.pyplot.boxplot. Version 3.6, Retrieved December 16, 2022 from https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.boxplot.html    \n",
-    "    "
+    " * Matplotlib documentation (2022). matplotlib.pyplot.boxplot. Version 3.6, Retrieved December 16, 2022 from https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.boxplot.html    "
    ]
   }
  ],
